# structurify-sdk

./: .ai-index.yaml  .gitignore  LICENSE  README.md
docs/: api-reference.md  authentication.md
examples/: NODEJS_EXAMPLES.md  NOTEBOOKS.md  structurify_quickstart.ipynb
examples/codesandbox/: README.md  index.ts  package.json
examples/nodejs/: acord-125-commercial-insurance-application.ts  acord-2-automobile-loss-notice.ts  acord-25-certificate-of-liability-insurance.ts  acord-28-evidence-of-property-insurance.ts  adverse-event-report.ts  afe-authorization-for-expenditure.ts  affidavit-sworn-declaration.ts  aia-g702g703-pay-application.ts  air-waybill.ts  annotation-quality-review.ts  automotive-repair-order.ts  aws-invoice.ts  azure-invoice.ts  bank-guarantee.ts  bank-statement.ts  batch-production-record.ts  bill-of-exchange-draft.ts  bill-of-lading.ts  biostratigraphy-report.ts  brand-monitoring-mentions.ts  brasil-cartão-de-ponto.ts  brasil-ctps-digital.ts  brasil-extrato-fgts.ts  brasil-guia-de-depósito-judicial.ts  brasil-holerite-contracheque.ts  brasil-trct-termo-de-rescisão.ts  california-real-estate-forms.ts  cam-reconciliation.ts  certificate-of-analysis-coa.ts  certificate-of-conformance-coc.ts  certificate-of-origin.ts  clinical-trial-protocol.ts  closing-disclosure-trid.ts  cmr-international-consignment-note.ts  commercial-invoice-trade.ts  commercial-lease-abstraction.ts  competitive-intelligence.ts  construction-change-order.ts  construction-submittal.ts  content-moderation.ts  (+129 more)
examples/notebooks/: acord-125-commercial-insurance-application.ipynb  acord-2-automobile-loss-notice.ipynb  acord-25-certificate-of-liability-insurance.ipynb  acord-28-evidence-of-property-insurance.ipynb  (+165 more)
nodejs/: README.md  package-lock.json  package.json  tsconfig.json
openapi/: structurify-api.yaml
python/: README.md  pyproject.toml
python/structurify/: __init__.py  client.py  exceptions.py  webhooks.py
python/structurify/resources/: __init__.py  documents.py  exports.py  extraction.py  projects.py  templates.py
python/tests/: __init__.py  test_client.py  test_exceptions.py  test_resources.py  test_webhooks.py
(+17 files in other folders)
