[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "structurify"
version = "1.0.0"
description = "Official Python SDK for Structurify document extraction API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "REDSCVRY TECHNOLOGY PRIVATE LIMITED", email = "support@structurify.ai"}
]
maintainers = [
    {name = "REDSCVRY TECHNOLOGY PRIVATE LIMITED", email = "support@structurify.ai"}
]
keywords = ["structurify", "document", "extraction", "ai", "pdf", "ocr", "api"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "typing-extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
async = ["aiohttp>=3.8.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "responses>=0.22.0",
    "aioresponses>=0.7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://structurify.ai"
Documentation = "https://docs.structurify.ai"
Repository = "https://github.com/structurify/structurify-sdk"
Changelog = "https://github.com/structurify/structurify-sdk/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py38"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "Q"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
